--- a/templates/registration/profil.html.twig
+++ b/templates/registration/profil.html.twig
@@ -8,119 +8,113 @@
     
     <h1 class="text-center">Vos données personnelles</h1>
 
-
     {% if user.roles.0 == 'ROLE_ADMIN' %}
-        <p class="text-center text-secondary">Vous êtes ADMINISTRATEUR du site</p>
+        <p class="text-center text-secondary mb-4">Vous êtes <span class="text-primary">ADMINISTRATEUR</span>  du site</p>
     {% endif %}
 
-    <div class="col-6 mx-auto accordion mb-5" id="accordionExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Email
-            </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                <div class="accordion-body d-flex justify-content-between">
-                    <span>{{ user.email }}</span>
-                    <span><a href="{{ path('app_profil_edit', {'id': user.id}) }}" class="link-secondary">Modifier</a></span>
+    <div class="d-flex justify-content-around">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card border-secondary">
+                    <div class="card-body">
+                        <h4 class="text-center my-3">Votre Profil</h4>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Email :</p>
+                            <p class="card-text">{{user.email}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Pseudo :</p>
+                            <p class="card-text">{{user.pseudo}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Nom :</p>
+                            <p class="card-text">{{user.nom}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Prénom :</p>
+                            <p class="card-text">{{user.prenom}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Sexe :</p>
+                            <p class="card-text">{{user.sexe}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Téléphone :</p>
+                            <p class="card-text">{{user.telephone}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Adresse :</p>
+                            <p class="card-text">{{user.adresse}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Ville :</p>
+                            <p class="card-text">{{user.ville}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Code Postale :</p>
+                            <p class="card-text">{{user.codePostal}}</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="?op=modif" class="btn btn-outline-secondary px-5 text-center my-3">Modifier</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsetwo" aria-expanded="true" aria-controls="collapseTwo">
-                Pseudo
-            </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                <div class="accordion-body d-flex justify-content-between">
-                    <span>{{ user.pseudo }}</span>
-                    <span><a href="{{ path('app_profil_edit', {'id': user.id}) }}" class="link-secondary">Modifier</a></span>
+
+            {% if app.request.query.get('op') == 'modif' %}
+
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="text-center my-3">Votre Profil</h4>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Email :</p>
+                            <p class="card-text">{{user.email}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Pseudo :</p>
+                            <p class="card-text">{{user.pseudo}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Nom :</p>
+                            <p class="card-text">{{user.nom}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Prénom :</p>
+                            <p class="card-text">{{user.prenom}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Sexe :</p>
+                            <p class="card-text">{{user.sexe}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Téléphone :</p>
+                            <p class="card-text">{{user.telephone}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Adresse :</p>
+                            <p class="card-text">{{user.adresse}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Ville :</p>
+                            <p class="card-text">{{user.ville}}</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Code Postale :</p>
+                            <p class="card-text">{{user.codePostal}}</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="?op=modif" class="btn btn-outline-secondary px-5 text-center my-3">Modifier</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Prénom
-            </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                <div class="accordion-body d-flex justify-content-between">
-                <span>{{ user.prenom }}</span>
-                <span><a href="{{ path('app_profil_edit', {'id': user.id}) }}" class="link-secondary">Modifier</a></span>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingFour">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Nom
-            </button>
-            </h2>
-            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-                <div class="accordion-body d-flex justify-content-between">
-                    <span>{{ user.nom }}</span>
-                    <span><a href="{{ path('app_profil_edit', {'id': user.id}) }}" class="link-secondary">Modifier</a></span>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingFive">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                Adresse
-            </button>
-            </h2>
-            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
-                <div class="accordion-body d-flex justify-content-between">
-                    <span>{{ user.adresse }}</span>
-                    <span><a href="{{ path('app_profil_edit', {'id': user.id}) }}" class="link-secondary">Modifier</a></span>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingSix">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                Telephone
-            </button>
-            </h2>
-            <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
-                <div class="accordion-body d-flex justify-content-between">
-                    <span>{{ user.telephone }}</span>
-                    <span><a href="{{ path('app_profil_edit', {'id': user.id}) }}" class="link-secondary">Modifier</a></span>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingSeven">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                Ville
-            </button>
-            </h2>
-            <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
-                <div class="accordion-body d-flex justify-content-between">
-                    <span>{{ user.ville }}</span>
-                    <span><a href="{{ path('app_profil_edit', {'id': user.id}) }}" class="link-secondary">Modifier</a></span>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingEight">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                Code Postal
-            </button>
-            </h2>
-            <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
-                <div class="accordion-body d-flex justify-content-between">
-                    <span>{{ user.codePostal }}</span>
-                    <span><a href="{{ path('app_profil_edit', {'id': user.id}) }}" class="link-secondary">Modifier</a></span>
-                </div>
-            </div>
+            {% endif %}
 
         </div>
     </div>
-</div>
+
+    
 
     
 
