--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -39,6 +39,9 @@
             </div>
 
         {{ form_end(registrationForm) }}
+
+        <p class="text-center my-5">Vous avez un compte ? <a href="{{ path('app_login') }}">Connectez-vous</a> .</p>
+
     </div>
 
 {% endblock %}
