--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -1,19 +1,63 @@
-{% extends 'base.html.twig' %}
+<html lang="fr" class="h-100">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Ma Boutique e-commerce">
+        <meta name="author" content="Yassir">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css"> 
+        <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+        <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
+        <meta name="theme-color" content="#7952b3">
+        <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/dashboard/">
+        <title>Shop | Home</title>
 
-{% block title %}
-      Home
-{% endblock %}
+        <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+            }
+        }
+        </style>
+        <link href="{{ asset('CSS/index.css') }}" rel="stylesheet">
 
-{% block body %}
+    </head>
+    <body class="d-flex h-100 text-center text-white bg-dark">
+        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+            <header class="mb-auto">
+                <div>
+                <h3 class="float-md-start mb-0">Logo</h3>
+                <nav class="nav nav-masthead justify-content-center float-md-end">
+                    <a class="nav-link text-primary" aria-current="page" href="{{ path('home') }}">Home</a>
+                    <a class="nav-link text-white" href="#">Boutique</a>
+                    <a class="nav-link text-danger" href="#">Contact</a>
+                </nav>
+                </div>
+            </header>
+            <main class="px-3">
+                    <h1>Bienvenue sur notre site</h1>
+                    <p class="lead">Quel type d'article recherchez-vous ?</p>
+                    <p class="lead">
+                        <a href="#" class="btn btn-outline-primary fw-bold border-white">Homme</a>
+                        <a href="#" class="btn btn-outline-light fw-bold border-white">Mixte</a>
+                        <a href="#" class="btn btn-outline-danger fw-bold border-white">Femme</a>
+                    </p>
+            </main>
 
-        <h1 class="container text-center">BIENVENUE SUR WORLD OF SHOUA</h1>
+            <footer class="mt-auto text-white-50">
+            </footer>
+        </div>
 
-        <main class="px-3 text-center">
-            <p class="lead">Faites Votre Choix Vous n'allez pas le regretter</p>
-            <p class="lead">
-            <a href="" class="btn btn-outline-light border-primary fw-bold text-primary col-1">Homme</a>
-            <a href="" class="btn btn-outline-light border-danger fw-bold text-danger col-1">Femme</a>
-            </p>        
-        </main>
-    
-{% endblock %}
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </body>
+</html>
