--- a/templates/registration/profil.html.twig
+++ b/templates/registration/profil.html.twig
@@ -13,105 +13,85 @@
     {% endif %}
 
     <div class="d-flex justify-content-around">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card border-secondary">
-                    <div class="card-body">
-                        <h4 class="text-center my-3">Votre Profil</h4>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Email :</p>
-                            <p class="card-text">{{user.email}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Pseudo :</p>
-                            <p class="card-text">{{user.pseudo}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Nom :</p>
-                            <p class="card-text">{{user.nom}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Prénom :</p>
-                            <p class="card-text">{{user.prenom}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Sexe :</p>
-                            <p class="card-text">{{user.sexe}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Téléphone :</p>
-                            <p class="card-text">{{user.telephone}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Adresse :</p>
-                            <p class="card-text">{{user.adresse}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Ville :</p>
-                            <p class="card-text">{{user.ville}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Code Postale :</p>
-                            <p class="card-text">{{user.codePostal}}</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="?op=modif" class="btn btn-outline-secondary px-5 text-center my-3">Modifier</a>
-                        </div>
+        <div class="col-sm-5">
+            <div class="card border-secondary">
+                <div class="card-body">
+                    <h4 class="text-center my-3">Votre Profil</h4>
+                    <div class="d-flex justify-content-between">
+                        <p class="card-text">Email :</p>
+                        <p class="card-text">{{user.email}}</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p class="card-text">Pseudo :</p>
+                        <p class="card-text">{{user.pseudo}}</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p class="card-text">Nom :</p>
+                        <p class="card-text">{{user.nom}}</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p class="card-text">Prénom :</p>
+                        <p class="card-text">{{user.prenom}}</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p class="card-text">Sexe :</p>
+                        <p class="card-text">{{user.sexe}}</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p class="card-text">Téléphone :</p>
+                        <p class="card-text">0{{user.telephone}}</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p class="card-text">Adresse :</p>
+                        <p class="card-text">{{user.adresse}}</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p class="card-text">Ville :</p>
+                        <p class="card-text">{{user.ville}}</p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p class="card-text">Code Postale :</p>
+                        <p class="card-text">{{user.codePostal}}</p>
+                    </div>
+                    <div class="text-center">
+                        <a href="?op=modif" class="btn btn-outline-secondary px-5 text-center my-3 {% if app.request.query.get('op') == 'modif' %} disabled{% endif %}">Modifier</a>
                     </div>
                 </div>
             </div>
-
-            {% if app.request.query.get('op') == 'modif' %}
-
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h4 class="text-center my-3">Votre Profil</h4>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Email :</p>
-                            <p class="card-text">{{user.email}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Pseudo :</p>
-                            <p class="card-text">{{user.pseudo}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Nom :</p>
-                            <p class="card-text">{{user.nom}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Prénom :</p>
-                            <p class="card-text">{{user.prenom}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Sexe :</p>
-                            <p class="card-text">{{user.sexe}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Téléphone :</p>
-                            <p class="card-text">{{user.telephone}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Adresse :</p>
-                            <p class="card-text">{{user.adresse}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Ville :</p>
-                            <p class="card-text">{{user.ville}}</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Code Postale :</p>
-                            <p class="card-text">{{user.codePostal}}</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="?op=modif" class="btn btn-outline-secondary px-5 text-center my-3">Modifier</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {% endif %}
-
         </div>
+        {% if app.request.query.get('op') == 'modif' %}
+            <div class="col-sm-5">
+                <div class="card border-info">
+                    <div class="card-body">
+                        {{ form_start(formUpdate) }}
+                            <h4 class="text-center my-3">Modifier votre Profil</h4>
+                            <div class="d-flex justify-content-center my-2">
+                                <p class="card-text">{{ form_row(formUpdate.sexe) }}</p>
+                            </div>
+                            <div class="d-flex justify-content-between my-2">
+                                <p class="card-text">{{ form_row(formUpdate.email) }}</p>
+                                <p class="card-text">{{ form_row(formUpdate.pseudo) }}</p>
+                            </div>
+                            <div class="d-flex justify-content-between my-2">
+                                <p class="card-text">{{ form_row(formUpdate.nom) }}</p>
+                                <p class="card-text">{{ form_row(formUpdate.prenom) }}</p>
+                            </div>
+                            <div class="d-flex justify-content-between my-2">
+                                <p class="card-text">{{ form_row(formUpdate.telephone) }}</p>
+                                <p class="card-text">{{ form_row(formUpdate.adresse) }}</p>
+                            </div>
+                            <div class="d-flex justify-content-between my-2">
+                                <p class="card-text">{{ form_row(formUpdate.ville) }}</p>
+                                <p class="card-text">{{ form_row(formUpdate.codePostal) }}</p>
+                            </div>
+                            <div class="text-center mt-4">                                
+                                <button type="submit" class="btn btn-outline-info col-4">Enregistrer</button>
+                            </div>
+                        {{ form_end(formUpdate) }}
+                    </div>
+                </div>
+            </div>
+        {% endif %}
     </div>
 
     
