--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,20 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}World of Shoua | Connexion{% endblock %}
+{% block title %}Connexion{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <form method="post">
+        {% if error %}
+            <div class="alert alert-danger col-5 mx-auto">Email ou Mot de Passe invalide.</div>
+        {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-
-    <h1 class="mb-3 text-center my-5">Connectez-vous</h1>
+        <h1 class="mb-3 text-center my-5">Connectez-vous</h1>
         <div class="col-5 mx-auto mb-5">
 
             <label for="inputEmail">Email</label>
@@ -28,5 +22,5 @@
             </div>
             <p class="text-center my-5">Vous n'avez pas encore de compte ? <a href="{{ path('app_register') }}">Créer votre compte</a> .</p>
         </div>
-</form>
+    </form>
 {% endblock %}
