--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -38,7 +38,7 @@
                 <h3 class="float-md-start mb-0">Logo</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link text-primary" aria-current="page" href="{{ path('home') }}">Home</a>
-                    <a class="nav-link text-white" href="#">Boutique</a>
+                    <a class="nav-link text-white" href="{{ path('boutique') }}">Boutique</a>
                     <a class="nav-link text-danger" href="#">Contact</a>
                 </nav>
                 </div>
