--- a/templates/shop/shop.html.twig
+++ b/templates/shop/shop.html.twig
@@ -8,6 +8,103 @@
     
     <h1 class="text-center">Boutique</h1>
 
-    
-
+    <div class="row justify-content-around position-relative my-5">
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
