--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -59,7 +59,7 @@
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-white">About</a></li>
                 </ul>
-                <p class="text-center text-muted">© 2021 Yassir & Corp, Inc</p>
+                <p class="text-center text-muted">© 2021 SYYR & Corp, Inc</p>
             </div>
         </footer>
         
