--- a/templates/registration/profil.html.twig
+++ b/templates/registration/profil.html.twig
@@ -13,8 +13,8 @@
     {% endif %}
 
     <div class="d-flex justify-content-around">
-        <div class="row">
-            <div class="col-sm-6">
+        {# <div class="row"> #}
+            <div class="col-sm-4">
                 <div class="card border-secondary">
                     <div class="card-body">
                         <h4 class="text-center my-3">Votre Profil</h4>
@@ -63,7 +63,7 @@
 
             {% if app.request.query.get('op') == 'modif' %}
 
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <div class="card">
                     <div class="card-body">
                         <h4 class="text-center my-3">Votre Profil</h4>
@@ -111,7 +111,7 @@
             </div>
             {% endif %}
 
-        </div>
+        {# </div> #}
     </div>
 
     
