--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -144,7 +144,7 @@
         </ul>
       </div>
     </nav>
-    <div class="p-2" style="width: 80%; margin-left: 17.5%; overflow-y: auto;">        
+    <div class="p-2" style="width: 80%; margin-left: 17.5%; overflow-y: auto;">  {# overflow-y c'est pour descendre avec la souris#}      
         {% block body %}
             
         {% endblock %}        
