raffraichissement de la page boutique

--- a/templates/shop/shop.html.twig
+++ b/templates/shop/shop.html.twig
@@ -10,14 +10,45 @@
 
     <div class="row justify-content-around position-relative my-5">
         <div class="card" style="width: 18rem;">
-            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
+            <img src="uploads/photos/sac-Dior.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text"></p>
-                <p class="card-text"></p>
+                <h5 class="card-title">Sac à main Dior</h5>
+                <p class="card-text">1499.99€</p>
                 <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
             </div>
         </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/jean.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Jeans Dsquared bleu</h5>
+                <p class="card-text">299.00€</p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/sacoche.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Sacoche Louis Vuitton Noir</h5>
+                <p class="card-text">989.00€</p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/pull.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Pull Kenzo</h5>
+                <p class="card-text">200.00€</p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="uploads/photos/casquette.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Casquette Gucci</h5>
+                <p class="card-text">200.00€</p>
+                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
+            </div>
+        </div>  
         <div class="card" style="width: 18rem;">
             <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -26,38 +57,8 @@
                 <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text"></p>
-                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text"></p>
-                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text"></p>
-                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text"></p>
-                <a href="{{ path('fiche-produit') }}" class="btn btn-primary">Voir le produit</a>
-            </div>
-        </div>
+    </div>
+    <div class="row justify-content-around position-relative my-5">      
         <div class="card" style="width: 18rem;">
             <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
             <div class="card-body">
