--- a/templates/shop/fiche-produit.html.twig
+++ b/templates/shop/fiche-produit.html.twig
@@ -9,8 +9,9 @@
         <div class="card col-md-5 justify-content-center">
             <img src="uploads/photos/one-piece.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text"></p>
+                <h5 class="card-title">Sac à main Dior</h5>
+                <p class="card-text"> Sac à main de couleur Noir</p>
+                <p class="card-text">1499.99€</p>
                 <a href="#" class="btn btn-dark">Ajouter au panier</a>
             </div>
         </div>
