--- a/templates/back_office/admin_category_form.html.twig
+++ b/templates/back_office/admin_category_form.html.twig
@@ -28,6 +28,8 @@
             <div class="card-body border-warning">
                 <p class="card-text">{{ form_row(formCat.titre) }}</p>
                 <p class="card-text">{{ form_row(formCat.grdCat) }}</p>
+                <p class="card-text">{{ form_row(formCat.sexe) }}</p>
+
             </div>
             <div class="card-footer text-muted border-warning">
                 <div class="text-center">
