--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-    <form method="post">
+    <form method="post" style="vertical-align:middle;">
         {% if error %}
             <div class="alert alert-danger col-5 mx-auto">Email ou Mot de Passe invalide.</div>
         {% endif %}
