--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -40,7 +40,7 @@ body {
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgb(118, 118, 134);
+  border-bottom-color: rgb(100, 5, 5);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -51,4 +51,6 @@ body {
   color: #fff;
   border-bottom-color: #fff;
 }
-
+.nav-link:hover{
+  color: rgb(126, 126, 126) !important;
+}
