--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,60 +4,76 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Ma Boutique e-commerce">
         <meta name="author" content="Yassir">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css"> 
-        <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-        <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-        <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
         <meta name="theme-color" content="#7952b3">
-        <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/dashboard/">
-        <title>Home</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <title>
+        {% block title %}{% endblock %}
+        </title>
         <link href="{{ asset('CSS/shop.css') }}" rel="stylesheet">
     </head>
     <body>
         <header class="">
-            <nav class="d-flex navbar-black flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom fixed-top">
+            <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-1 navbar navbar-dark bg-dark fixed-top">
+                <a href="{{ path('home') }}" class="nav-link px-2 me-2 text-white"><img src="{{ asset('uploads/photos/logo_white_large.png') }}" alt="logo" style="height: 30px;"></a>
                 {% if app.user %}                    
-                    <a class="nav-link text-light ms-1" href="{{ path('app_profil') }}" title="Acces a votre compte">Bonjour <strong>{{ app.user.prenom }} {{ app.user.nom}}</strong></a>
+                    <a class="nav-link text-light ms-1" href="{{ path('app_profil') }}" title="Acces a votre compte">Bonjour <strong class="coul">{{ app.user.prenom }} {{ app.user.nom}}</strong></a>
                     <a href="/" class="d-flex align-items-center mb-2 mb-md-0 text-dark text-decoration-none"></a>
                 {% else %}
-                    <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"></a>
+                    <a href="/" class="d-flex align-items-center col-md-2 mb-2 mb-md-0 text-dark text-decoration-none"></a>
                 {% endif %}
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="{{ path('home') }}" class="nav-link px-2 me-2 text-white">Home</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="{{ path('home') }}" class="nav-link me-2 text-white">Home</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="{{ path('shop') }}" class="nav-link text-white">Shop</a></li>
+                    <li class="nav-link nav-link-ltr">
+                        <a href="#" class="nav-link text-white dropdown-toggle" id="drop1" role="button" data-bs-toggle="dropdown" aria-expanded="false">Homme</a>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="drop1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-link nav-link-ltr">
+                        <a href="#" class="nav-link text-white dropdown-toggle" id="drop2" role="button" data-bs-toggle="dropdown" aria-expanded="false">Femme</a>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="drop2">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link text-white">Contact</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link text-white">Panier <i class="bi bi-cart4"></i></a></li>
                 </ul>
 
-                <div class="col-md-3 text-end me-3">
+                <div class="col-md-3 col-sd-1 text-end me-3">
                     {% if app.user %} 
                         {% if is_granted('ROLE_ADMIN') %}
-                            <a type="button" href="{{ path('app_admin') }}" class="btn btn-outline-warning me-2">BackOffice</a>
+                            <a type="button" href="{{ path('app_admin') }}" class="btn btn-sm btn-outline-warning me-2 border-dark">BackOffice</a>
                         {% endif %}
-                        <a type="button" href="{{ path('app_logout') }}" class="btn btn-outline-danger">Déconnexion</a>
+                        <a type="button" href="{{ path('app_logout') }}" class="btn btn-sm btn-outline-danger border-dark">Déconnexion</a>
                     {% else %}
-                        <a type="button" href="{{ path('app_login') }}" class="btn btn-outline-primary me-2">Connexion</a>
-                        <a type="button" href="{{ path('app_register') }}" class="btn btn-outline-success">Inscription</a>
+                        <a type="button" href="{{ path('app_login') }}" class="btn btn-sm btn-outline-primary me-2 border-dark">Connexion</a>
+                        <a type="button" href="{{ path('app_register') }}" class="btn btn-sm btn-outline-success border-dark">Inscription</a>
                     {% endif %}
                 </div>
             </nav>
         </header>
-        <main style="min-height : 70%;">
+        <main style="min-height : 740px;">
+        <br><br><br>
             {% block body %}
                 
             {% endblock %}   
         </main>
         <footer class="bg-dark">
-            <div class="py-3 my-4">
-                <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                    <li class="nav-item"><a href="{{ path('home') }}" class="nav-link px-2 text-white">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-white">About</a></li>
+            <div class="pb-3">
+                <ul class="nav justify-content-center border-bottom mb-3">
+                    <li class="nav-link nav-link-ltr"><a href="{{ path('home') }}" class="nav-link px-2 me-2 text-white"><img src="{{ asset('uploads/photos/logo_small_icon_only_inverted.png') }}" alt="logo" style="height: 30px;"></a></li>
+                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">Features</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">About</a></li>
                 </ul>
                 <p class="text-center text-muted">© 2021 Yassir & Corp, Inc</p>
             </div>
@@ -66,8 +82,8 @@
         {% block javascripts %}
     
         {% endblock %}
-        <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script><script src="dashboard.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
     </body>
 </html>
 
