--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -50,7 +50,7 @@
 
     
     <!-- Custom styles for this template -->
-            <link href="{{ asset('CSS/admin.css') }}" rel="stylesheet">
+    <link href="{{ asset('CSS/admin.css') }}" rel="stylesheet">
 
   {# <script type="{{ asset('js/script.js') }}">/* Chart.js */ #}
  
@@ -59,7 +59,7 @@
   
     
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">World of Shoua</a>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">NoM De MaRqUe</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
