--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -35,11 +35,11 @@
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
             <header class="mb-auto">
                 <div>
-                <h3 class="float-md-start mb-0">Logo</h3>
+                <a href="{{ path('home') }}" class="h3 marq float-md-start mb-0"><img src="{{ asset('uploads/photos/logo_large.png') }}" alt="logo" style="height: 75px;"></a>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link text-primary" aria-current="page" href="{{ path('home') }}">Home</a>
+                    <a class="nav-link text-white" aria-current="page" href="{{ path('home') }}">Home</a>
                     <a class="nav-link text-white" href="#">Boutique</a>
-                    <a class="nav-link text-danger" href="#">Contact</a>
+                    <a class="nav-link text-white" href="#">Contact</a>
                 </nav>
                 </div>
             </header>
@@ -48,7 +48,7 @@
                     <p class="lead">Quel type d'article recherchez-vous ?</p>
                     <p class="lead">
                         <a href="#" class="btn btn-outline-primary fw-bold border-white">Homme</a>
-                        <a href="#" class="btn btn-outline-light fw-bold border-white">Mixte</a>
+                        <a href="#" class="btn btn-outline-light fw-bold border-white">Des idées ?</a>
                         <a href="#" class="btn btn-outline-danger fw-bold border-white">Femme</a>
                     </p>
             </main>
