--- a/templates/shop/shop.html.twig
+++ b/templates/shop/shop.html.twig
@@ -1,13 +1,122 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-    Boutique
+    Shop | ARYHA paris
 {% endblock %}
-
 {% block body %}
-    
-    <h1 class="text-center">Boutique</h1>
+{% set route_name = app.request.attributes.get('_route') %}
+<div class="container-fluid d-flex">
+    <div class="w-25 h-100">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{{ path('home') }}">Home</a></li>
+            <li class="breadcrumb-item"><a href="{{ path('shop') }}">Shop</a></li>
+            
+                
+        </ol>
+    </nav>
+    {{ render(controller('App\\Controller\\ShopController::allCategory')) }}
 
+    </div>
+
+    <div class="w-50 h-100 container" id="top">
+        <div class="row row-cols-1 row-cols-md-2 g-4 my-3">
+            {% set i = 0 %}
+            {% for data in articles %}
+                {% set i = i + 1 %}
+                {% if i in 0..10 %} 
+                    <div class="col">
+                        <div class="card h-100">
+                        <a href="{{ path('shop_show', {'id': data.id}) }}"><img src="{{ asset('uploads/photos/' ~ data.photo) }}" class="card-img-top img-fluid" alt="..."></a>
+                        
+                        <div class="card-body">
+                            <h5 class="card-title">{{data.titre}}</h5>
+                            <div class="d-flex justify-content-between">
+                            <p class="card-text">{{ data.description|slice(0,50)|striptags }}[...]</p>
+                            <p class="text-muted">{{data.prix}}&nbsp;€</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    {# {% elseif i in 10..20 %}
+                        <section class="col" style="display: none;">
+                            <div class="card h-100">
+                            <a href="{{ path('shop_show', {'id': data.id}) }}"><img src="{{ asset('uploads/photos/' ~ data.photo) }}" class="card-img-top img-fluid" alt="..."></a>
+                            
+                            <div class="card-body">
+                                <h5 class="card-title">{{data.titre}}</h5>
+                                <div class="d-flex justify-content-between">
+                                <p class="card-text">{{ data.description|slice(0,50)|striptags }}[...]</p>
+                                <p class="text-muted">{{data.prix}}&nbsp;€</p>
+                                <a href="{{ path('shop_show', {'id': data.id}) }}">Voir article</a>
+                                </div>
+                            </div>
+                            </div>
+                        </section> #}
+                {% endif %}
+
+            {% endfor %}
+
+
+        </div>        
+        <button id="clik" class="btn btn-danger">Voir plus</button>
+        <a href="?top" class="btn btn-warning">Remontez en haut</a>
+    </div>
+
+
+
+
+    <div class="w-25 h-100"> 
+        <div class="col-10 mx-auto order-md-last mt-5">
+            <h4 class="d-flex justify-content-between align-items-center mb-3">
+            <span class="text-primary">Votre Panier</span>
+            <span class="badge bg-primary rounded-pill">3</span>
+            </h4>
+            <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                <h6 class="my-0">Product name</h6>
+                <small class="text-muted">Brief description</small>
+                </div>
+                <span class="text-muted">$12</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                <h6 class="my-0">Second product</h6>
+                <small class="text-muted">Brief description</small>
+                </div>
+                <span class="text-muted">$8</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                <h6 class="my-0">Third item</h6>
+                <small class="text-muted">Brief description</small>
+                </div>
+                <span class="text-muted">$5</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between bg-light">
+                <div class="text-success">
+                <h6 class="my-0">Promo code</h6>
+                <small>EXAMPLECODE</small>
+                </div>
+                <span class="text-success">−$5</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+                <span>Total (USD)</span>
+                <strong>$20</strong>
+            </li>
+            </ul>
+            <form method="post" class="card p-2">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Code Promo" name="codePromo">
+                <button type="submit" class="btn btn-secondary">Utiliser</button>
+            </div>
+            </form>
+        </div>
+    </div>
+
+
+</div>
     
 
 {% endblock %}
