--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,24 +27,8 @@
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                     <li class="nav-link nav-link-ltr"><a href="{{ path('home') }}" class="nav-link me-2 text-white">Home</a></li>
                     <li class="nav-link nav-link-ltr"><a href="{{ path('shop') }}" class="nav-link text-white">Shop</a></li>
-                    <li class="nav-link nav-link-ltr">
-                        <a href="#" class="nav-link text-white dropdown-toggle" id="drop1" role="button" data-bs-toggle="dropdown" aria-expanded="false">Homme</a>
-                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="drop1">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-link nav-link-ltr">
-                        <a href="#" class="nav-link text-white dropdown-toggle" id="drop2" role="button" data-bs-toggle="dropdown" aria-expanded="false">Femme</a>
-                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="drop2">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
                     <li class="nav-link nav-link-ltr"><a href="#" class="nav-link text-white">Contact</a></li>
-                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link text-white">Panier <i class="bi bi-cart4"></i></a></li>
+                    <li class="nav-link nav-link-ltr"><a href="{{ path('panier') }}" class="nav-link text-white">Panier <i class="bi bi-cart4"></i></a></li>
                 </ul>
 
                 <div class="col-md-3 col-sd-1 text-end me-3">
