--- a/templates/shop/category_list.html.twig
+++ b/templates/shop/category_list.html.twig
@@ -1,16 +1,82 @@
 <div class="container mt-5">
-    <div class="text-center border border-dark mb-3">
-        <p>Genre :</p>
-        <div class="d-flex justify-content-around text-center border-dark border-top">
-            <a href="{{ path('shop_genre', {'sexe': "Homme"}) }}" class="text-secondary text-decoration-none">Homme</a>
-            <a href="{{ path('shop_genre', {'sexe': "Femme"}) }}" class="text-secondary text-decoration-none">Femme</a>
+    <h2 class="text-center my-4">Les catégories</h2>
+    <div class="accordion" id="accordionExample">      
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Homme
+            </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">  
+                    {% set a = 1 %}
+                    {% set newArray = [] %}
+                    {% for value in catHom %}
+                        {% if value.grdCat not in newArray %}
+                        {% set newArray = newArray|merge([value.grdCat]) %}
+                        {% set a = a + 1 %}
+                            <div class="accordion" id="accordionExample{{a}}">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="headingOne{{a}}">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne{{a}}" aria-expanded="true" aria-controls="collapseOne{{a}}">
+                                        {{value.grdCat}}
+                                    </button>
+                                    </h2>
+                                    <div id="collapseOne{{a}}" class="accordion-collapse collapse " aria-labelledby="headingOne{{a}}" data-bs-parent="#accordionExample{{a}}">
+                                        <div class="accordion-body">
+                                            {% for valeur in catHom %}
+                                            {% if valeur.grdCat == value.grdCat %}
+                                                <a href="{{ path('shop_category', {'id': valeur.id}) }}" class="btn link-secondary text-start">{{valeur.titre}}</a><br>
+                                            {% endif %}
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Femme
+            </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    {% set b = 10 %}
+                    {% set newArray1 = [] %}
+                    {% for value in catFem %}
+                        {% if value.grdCat not in newArray1 %}
+                        {% set newArray1 = newArray1|merge([value.grdCat]) %}
+                        {% set b = b + 1 %}
+                            <div class="accordion" id="accordionExample{{b}}">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="headingTwo{{b}}">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo{{b}}" aria-expanded="true" aria-controls="collapseTwo{{b}}">
+                                        {{value.grdCat}}
+                                    </button>
+                                    </h2>
+                                    <div id="collapseTwo{{b}}" class="accordion-collapse collapse " aria-labelledby="headingTwo{{b}}" data-bs-parent="#accordionExample{{b}}">
+                                        <div class="accordion-body">
+                                            {% for valeur in catFem %}
+                                            {% if valeur.grdCat == value.grdCat %}
+                                                <a href="{{ path('shop_category', {'id': valeur.id}) }}" class="btn link-secondary text-start">{{valeur.titre}}</a><br>
+                                            {% endif %}
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
-
-    {% for value in categorys %}
-        <a href="{{ path('shop_category', {'id': value.id}) }}" class="p-2 link-secondary">{{ value.titre }}</a>    
-    {% endfor %}
-
 
 </div>
 
