--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -54,3 +54,20 @@ body {
 .nav-link:hover{
   color: rgb(126, 126, 126) !important;
 }
+.hova{
+  color: #d8d8d8;
+  background-color: #5a5a5a;
+}
+.hova:hover{
+  color: #d8d8d8;
+  background-color: #550505;
+}
+.hovab{
+  color: #d8d8d8;
+  background-color: #550505;
+  
+}
+.hovab:hover{
+  color: #d8d8d8;
+  background-color: #5a5a5a;
+}
