--- a/public/CSS/shop.css
+++ b/public/CSS/shop.css
@@ -147,4 +147,20 @@ body {
   color: #d8d8d8;
   background-color: #550505;
 }
+.hova{
+  color: #d8d8d8;
+  background-color: #5a5a5a;
+}
+.hova:hover{
+  color: #d8d8d8;
+  background-color: #550505;
+}
+.hovab{
+  color: #5a5a5a;
+  border: 5px solid #d8d8d8;
+}
+.hovab:hover{
+  border:  1px solid #706d6d;
+  color: #550505;
+}
 
