--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -47,9 +47,9 @@
                     <h1>Bienvenue sur notre site</h1>
                     <p class="lead">Quel type d'article recherchez-vous ?</p>
                     <p class="lead">
-                        <a href="#" class="btn btn-outline-primary fw-bold border-white">Homme</a>
-                        <a href="#" class="btn btn-outline-light fw-bold border-white">Des idées ?</a>
-                        <a href="#" class="btn btn-outline-danger fw-bold border-white">Femme</a>
+                        <a href="#" class="btn hova fw-bold border-white">Homme</a>
+                        <a href="#" class="btn hovab fw-bold border-white">Des idées ?</a>
+                        <a href="#" class="btn hova fw-bold border-white">Femme</a>
                     </p>
             </main>
 
