--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}World of Shoua | Inscription{% endblock %}
+{% block title %}ARYHA paris | Inscription{% endblock %}
 
 {% block body %}
 
