--- a/templates/shop/home.html.twig
+++ b/templates/shop/home.html.twig
@@ -19,8 +19,8 @@ ARYHA paris | Home
         <h2>Sacs à main / Sac à dos</h2>
         <p>A partir de 100 €</p>
         <div>
-          <button class="btn btn-outline-secondary" type="button">Pour elle</button>
-          <button class="btn btn-outline-secondary" type="button">Pour lui</button>
+          <a href="{{ path('shop_category', {'id': 42}) }}" class="btn btn-outline-secondary" type="button">Pour elle</a>
+          <a href="{{ path('shop_category', {'id': 64}) }}" class="btn btn-outline-secondary" type="button">Pour lui</a>
         </div>
       </div>
     </div>
@@ -42,8 +42,8 @@ ARYHA paris | Home
         <h2>Bonnets / Gants / Ceintures</h2>
         <p>A partir de 20 €</p>
         <div>
-          <button class="btn btn-outline-secondary" type="button">Pour elle</button>
-          <button class="btn btn-outline-secondary" type="button">Pour lui</button>
+          <a href="{{ path('shop_category', {'id': 75}) }}" class="btn btn-outline-secondary" type="button">Pour elle</a>
+          <a href="{{ path('shop_category', {'id': 49}) }}" class="btn btn-outline-secondary" type="button">Pour lui</a>
         </div>
       </div>
     </div>
@@ -57,8 +57,8 @@ ARYHA paris | Home
         <h2>Sneakers / Escarpins / Mocassins</h2>
         <p>A partir de 120 €</p>
         <div>
-          <button class="btn btn-outline-secondary" type="button">Pour elle</button>
-          <button class="btn btn-outline-secondary" type="button">Pour lui</button>
+          <a href="{{ path('shop_category', {'id': 77}) }}" class="btn btn-outline-secondary" type="button">Pour elle</a>
+          <a href="{{ path('shop_category', {'id': 50}) }}" class="btn btn-outline-secondary" type="button">Pour lui</a>
         </div>      
       </div>
     </div>
@@ -80,8 +80,8 @@ ARYHA paris | Home
         <h2>Chemises / Sweats / Robes</h2>
         <p>A partir de 75 €</p>
         <div>
-          <button class="btn btn-outline-secondary" type="button">Pour elle</button>
-          <button class="btn btn-outline-secondary" type="button">Pour lui</button>
+          <a href="{{ path('shop_category', {'id': 81}) }}" class="btn btn-outline-secondary" type="button">Pour elle</a>
+          <a href="{{ path('shop_category', {'id': 64}) }}" class="btn btn-outline-secondary" type="button">Pour lui</a>
         </div>      
         </div>
     </div>
@@ -95,8 +95,8 @@ ARYHA paris | Home
         <h2>Montres / Colliers / Bagues</h2>
         <p>A partir de 50 €</p>
         <div>
-          <button class="btn btn-outline-secondary" type="button">Pour elle</button>
-          <button class="btn btn-outline-secondary" type="button">Pour lui</button>
+          <a href="{{ path('shop_category', {'id': 89}) }}" class="btn btn-outline-secondary" type="button">Pour elle</a>
+          <a href="{{ path('shop_category', {'id': 59}) }}" class="btn btn-outline-secondary" type="button">Pour lui</a>
         </div>
       </div>
     </div>
