--- a/templates/shop/shop.html.twig
+++ b/templates/shop/shop.html.twig
@@ -46,13 +46,13 @@
                         </div>
                     </div>
                 {% endif %}
-
+            {% else %}
+            
             {% endfor %}
 
 
         </div>        
-        <button id="clik" class="btn btn-danger">Voir plus</button>
-        <a href="?top" class="btn btn-warning">Remontez en haut</a>
+        <a href="?top" class="btn hova">Remontez en haut</a>
     </div>
 
 
