--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -35,7 +35,7 @@
                 <div class="col-6">{{ form_row(registrationForm.password.second) }}</div>
             </div>
             <div class='text-center my-5'>
-                    <button type="submit" class="btn btn-success text-white mb-3 col-3">S'inscrire</button>
+                    <button type="submit" class="btn hova text-white mb-3 col-3">S'inscrire</button>
             </div>
 
         {{ form_end(registrationForm) }}
