--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,11 +4,12 @@
 
 {% block body %}
     <form method="post" style="vertical-align:middle;">
+        <h1 class="mb-3 text-center my-5 hov">Connectez-vous</h1>
+        
         {% if error %}
             <div class="alert alert-danger col-5 mx-auto">Email ou Mot de Passe invalide.</div>
         {% endif %}
 
-        <h1 class="mb-3 text-center my-5">Connectez-vous</h1>
         <div class="col-5 mx-auto mb-5">
 
             <label for="inputEmail">Email</label>
@@ -18,7 +19,7 @@
 
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
             <div class="text-center mt-4">
-                <button class="btn btn-secondary col-3" type="submit" href="{{ path('app_profil') }}">Se connecter</button>
+                <button class="btn hova col-3" type="submit" href="{{ path('app_profil') }}">Se connecter</button>
             </div>
             <p class="text-center my-5">Vous n'avez pas encore de compte ? <a href="{{ path('app_register') }}">Créer votre compte</a> .</p>
         </div>
